--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
             
             <nav>
                 <ul>
-                    <li><a href="#intro">intro</a></li>
-                    <li><a href="#grid-one">grid-one</a></li>
-                    <li><a href="#gallery">gallery</a></li>
-                    <li><a href="#grid-two">grid-two</a></li>
+                    <li><a href="#intro">Intro</a></li>
+                    <li><a href="#grid-one">Grid-one</a></li>
+                    <li><a href="#gallery">Gallery</a></li>
+                    <li><a href="#grid-two">Grid-two</a></li>
                     <li><a href="#pricing">Pricing</a></li>
-                    <li><a href="#">contact</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
         </section>
     </aside>
 
-    <div class="menu-spacing"></div>
+ <div class="menu-spacing"></div>
     
     <section id="home" class="intro main-bg section">
         <div class="main-content intro-content">
@@ -212,5 +212,47 @@
             </div>
         </div>
     </section>
+    <section id="contact" class="intro main-bg section">
+        <div class="main-content intro-content">
+            <div class="intro-text-content">
+                <h2>Contact us</h2>
+                <p>To wrap up January, we are proud to bring you the release of Firefox 85. In this version we are bringing
+                    you support for the :focus-visible pseudo-class in CSS and associated devtools, and the complete removal
+                    of Flash support from Firefox.
+                </p>
+            </div>
+            <div class="intro-img">
+                <img src="./assets/img/javascript-not-optimized.svg" alt="Logo de HTML, CSS E JS">
+            </div>
+            <div class="contact-form">
+               <fieldset class="form-grid">
+                   <legend>Contact me</legend>
+
+                  <div class="form-group">
+                       <label for="first-name">First-name</label>
+                       <input type="text" name="first-name" id="first-name" placeholder="Your name">
+                  </div>
+                 <div class="form-group">
+                     <label for="last-name">First-name</label>
+                    <input type="text" name="last-name" id="last-name" placeholder="Last name">
+                 </div>
+                 <div class="form-group">
+                    <label for="email">E-mail</label>
+                   <input type="email" name="email" id="email" placeholder="E-mail">
+                </div>
+                <div class="form-group full-width">
+                    <label for="message">Message</label>
+                    <textarea name="message" id="message" cols="30" rows="10" placeholder="Your message"></textarea>
+                </div>
+                <div class="form-group full-width">
+                   <button type="submit">Send message</button>
+                </div>
+               </fieldset>
+            </div>
+        </div>
+    </section>
+    <footer id="footer" class="main-bg">
+        <p><a rel="nofollow" target="_blank" href="https://www.linkedin.com/in/jo%C3%A3o-henrique-batista-pereira/">Feito com amor por João Henrique no curso JS 2021</a></p>
+    </footer>
 </body>
 </html>
